--- a/design/stylesheets/design.css
+++ b/design/stylesheets/design.css
@@ -1,22 +1,31 @@
+@charset "UTF-8";
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
-}
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif; }
 
 .header {
-    width: 100vw;
-    height: 100vh;
-    background-size: cover;
-    background-position: center;
-    background-image: url("../images/top@0.75x-80.jpg");
-}
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-position: center;
+  background-image: url("../images/top@0.75x-80.jpg"); }
 
 .nav {
-    font-family: "Gothic MB101 Light";
-}
+  font-family: "Gothic MB101 Regular";
+  position: relative;
+  width: 100%; }
+  .nav h1 {
+    position: absolute;
+    left: 0; }
+  .nav ul {
+    position: absolute;
+    right: 0; }
+    .nav ul li {
+      float: left;
+      display: block;
+      width: 200px;
+      text-align: center;
+      list-style-type: none; }
+      .nav ul li a {
+        color: #222; }
 
-ul.nav li {
-    float: left;
-    display: block;
-    width: 16.6%;
-    list-style-type: none;
-}
+/*# sourceMappingURL=design.css.map */
