--- a/design/stylesheets/design.css
+++ b/design/stylesheets/design.css
@@ -9,23 +9,22 @@ body {
   background-position: center;
   background-image: url("../images/top@0.75x-80.jpg"); }
 
-.nav {
-  font-family: "Gothic MB101 Regular";
-  position: relative;
-  width: 100%; }
-  .nav h1 {
-    position: absolute;
-    left: 0; }
-  .nav ul {
-    position: absolute;
-    right: 0; }
-    .nav ul li {
-      float: left;
-      display: block;
-      width: 200px;
+nav {
+  font-family: "Gothic MB101 Regular"; }
+  nav h1 {
+    text-align: center; }
+  nav ul {
+    display: flex;
+    align-items: center; }
+    nav ul li {
       text-align: center;
-      list-style-type: none; }
-      .nav ul li a {
-        color: #222; }
+      list-style-type: none;
+      width: 20%; }
+      nav ul li a {
+        color: #222;
+        text-decoration: none; }
+        nav ul li a:hover {
+          border-bottom: solid 1px #222;
+          color: #222; }
 
 /*# sourceMappingURL=design.css.map */
