--- a/design/stylesheets/design.scss
+++ b/design/stylesheets/design.scss
@@ -10,33 +10,34 @@ body {
   background-image: url("../images/top@0.75x-80.jpg");
 }
 
-.nav {
+nav {
 
   font-family: "Gothic MB101 Regular";
-  position: relative;
-  width: 100%;
 
   h1 {
-    position: absolute;
-    left: 0;
+    text-align: center;
   }
 
   ul {
-
-    position: absolute;
-    right: 0;
+    display: flex;
+    align-items: center;
 
     li {
 
-      float: left;
-      display: block;
-      width: 200px;
       text-align: center;
       list-style-type: none;
+      width: 20%;
 
       a {
         color: #222;
+        text-decoration: none;
+
+        &:hover {
+          border-bottom: solid 1px #222;
+          color: #222;
+        }
       }
+
 
     }
 
