--- a/design/stylesheets/design.css
+++ b/design/stylesheets/design.css
@@ -8,23 +8,58 @@ body {
   background-size: cover;
   background-position: center;
   background-image: url("../images/top@0.75x-80.jpg"); }
-
+  .header .scroll {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    height: 0;
+    width: 0;
+    border-left: 90px solid transparent;
+    border-right: 90px solid transparent;
+    border-bottom: 80px solid #C1272D;
+    transform: translateX(-50%); }
+    .header .scroll:before {
+      content: '';
+      position: absolute;
+      top: 45px;
+      left: 50%;
+      height: 20px;
+      width: 30px;
+      margin-top: -5px;
+      margin-left: -15px;
+      background: #fff;
+      clip-path: polygon(15% 0, 50% 60%, 85% 0, 100% 20%, 50% 100%, 0 20%);
+      animation: bounce 2s ease infinite; }
+@keyframes bounce {
+  50% {
+    transform: scale(0.75) translateY(-50%); }
+  100% {
+    transform: translateY(0); } }
 nav {
-  font-family: "Gothic MB101 Regular"; }
+  font-family: "Gothic MB101 Regular", "Noto Sans Japanese";
+  background-color: #fff; }
   nav h1 {
-    text-align: center; }
+    margin-left: 20px;
+    padding-top: 8px;
+    margin-bottom: 0; }
+    nav h1 img {
+      max-width: 460px;
+      height: auto; }
   nav ul {
     display: flex;
-    align-items: center; }
+    align-items: center;
+    background-color: #C1272D;
+    height: 40px; }
     nav ul li {
       text-align: center;
       list-style-type: none;
+      margin-top: 8px;
       width: 20%; }
       nav ul li a {
-        color: #222;
+        color: #fff;
         text-decoration: none; }
         nav ul li a:hover {
-          border-bottom: solid 1px #222;
-          color: #222; }
+          border-bottom: solid 1px #fff;
+          color: #fff; }
 
 /*# sourceMappingURL=design.css.map */
