fix header height for Android/iPhone

--- a/design/stylesheets/design.scss
+++ b/design/stylesheets/design.scss
@@ -2,6 +2,9 @@ $accent: #C1272D;
 $accent-transparent: rgba(193,39,45,0.6);
 $scrollSize:    90px;
 
+html, body {
+  height: 100%;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
 }
@@ -12,6 +15,11 @@ body {
   background-size: cover;
   background-position: center;
   background-image: url("../images/top@0.75x-80.jpg");
+  
+  @media screen and (max-width: 840px) {
+    height: 100%;
+    overflow: hidden;
+  }
 
   .scroll {
   position: absolute;
