--- a/design/stylesheets/design.css
+++ b/design/stylesheets/design.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+html, body {
+  height: 100%; }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif; }
 
@@ -8,6 +11,10 @@ body {
   background-size: cover;
   background-position: center;
   background-image: url("../images/top@0.75x-80.jpg"); }
+  @media screen and (max-width: 840px) {
+    .header {
+      height: 100%;
+      overflow: hidden; } }
   .header .scroll {
     position: absolute;
     left: 50%;
