fix clip-path for Safari browsers

--- a/design/stylesheets/design.css
+++ b/design/stylesheets/design.css
@@ -39,6 +39,7 @@ body {
       margin-left: -15px;
       background: #fff;
       clip-path: polygon(15% 0, 50% 60%, 85% 0, 100% 20%, 50% 100%, 0 20%);
+      -webkit-clip-path: polygon(15% 0, 50% 60%, 85% 0, 100% 20%, 50% 100%, 0 20%);
       animation: bounce 2s ease infinite; }
 @keyframes bounce {
   50% {
