--- a/design/stylesheets/design.scss
+++ b/design/stylesheets/design.scss
@@ -1,14 +1,28 @@
+// Variables
 $accent: #C1272D;
-$accent-transparent: rgba(193,39,45,0.6);
-$scrollSize:    90px;
+$accent-transparent: rgba(193, 39, 45, 0.6);
+$scrollSize: 90px;
+$gray: #CCCCCC;
 
+// Overall
 html, body {
   height: 100%;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Noto Sans Japanese", "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, Meiryo, sans-serif;
 }
 
+.row {
+  margin-top: 20px;
+}
+
+// Headings
+h3 {
+  font-weight: bolder;
+}
+
+// Header
 .header {
   width: 100vw;
   height: 100vh;
@@ -66,6 +80,7 @@ body {
   }
 }
 
+// Global Navigation
 nav {
   background-color: #fff;
 
@@ -149,10 +164,38 @@ nav {
   }
 }
 
-.row {
+// Footer
+footer {
   margin-top: 20px;
+  background-color: $gray;
+  height: 100px;
+  text-align: center;
 }
 
-h3 {
-  font-weight: bolder;
+// Parts
+
+.moreLink {
+  display: block;
+  padding: 0.3em 1em;
+  text-decoration: none;
+  border: solid 2px $accent;
+  transition: .4s;
+  width: 80px;
+  margin-left: auto;
+  text-align: center;
+  color: $accent;
+
+  svg, i {
+    color: $accent;
+    vertical-align: -2px;
+  }
+}
+
+.moreLink:hover {
+  background: $accent;
+  color: #fff;
+
+  svg, i {
+    color: #fff;
+  }
 }
